Update pom.xml: Use TORNADOVM_HOME, remove `--enable-preview`, and refine test configuration